# Trenches-Of-Fate

./: .gitignore  Artillary-StoryLine  CMakeLists.txt  README.md  test_event_and_graph
lib/: Character.h  CharacterSelectionUI.h  EndScreenUI.h  Event.h  Game.h  Graph.h  HomePageUI.h  SettingsUI.h  StoryUI.h  character.h
src/: Character.cpp  CharacterSelectionUI.cpp  Event.cpp  Game.cpp  Graph.cpp  HomePageUI.cpp  SettingsUI.cpp  StoryUI.cpp  character.cpp  event.cpp  graph.cpp  main.cpp  main_character.cpp
storylineFiles/: easy.txt  hard.txt  test1.txt
test/: test.cpp  testCharacter.cpp  testEventGraph.cpp  testWholeGame.cpp
